<resources>
    <string name="app_name">Flow</string>


    <!-- SPLASH SCREEN STRINGS -->
    <string name="splash_welcome_title">Flow</string>
    <string name="splash_welcome_description">An app for people who like to get things done</string>
    <string name="button_splash_get_started">GET STARTED</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- END SPLASH SCREEN STRINGS -->

    <!-- WELCOME STRINGS -->
    <string name="skip">SKIP</string>
    <string name="lets_go">LET\'S GO</string>
    <!-- END WELCOME STRINGS -->

    <!-- NAVIGATION DRAWER STRINGS -->
    <string name="nav_account">Account</string>
    <string name="nav_sign_out">Sign Out</string>
    <!-- END NAVIGATION DRAWER STRINGS -->

    <!-- TASK VIEW STRINGS -->
    <string name="today">Today</string>
    <string name="nav_tasks">Tasks</string>
    <string name="cont_desc_add_new_task">Add a new task</string>
    <string name="tapped">Tapped </string>
    <string name="added_to_tasks"> was added to your tasks</string>
    <!-- END TASK VIEW STRINGS -->

    <!-- NEW TASK FRAGMENT STRINGS -->
    <string name="new_task_fragment_title">What do you need to get done?</string>
    <string name="save">save</string>
    <!-- END NEW TASK FRAGMENT STRINGS -->

    <!-- PROFILE STRINGS -->
    <string name="nav_profile">Profile</string>
    <string name="profile_header">Flow stats for %1$s</string>
    <string name="profile_member_since_label">Member since</string>
    <string name="profile_level_label">Flow mastery level</string>
    <string name="profile_level">Novice</string>
    <string name="profile_mastery_card_label">Mastery Levels</string>
    <string name="cont_desc_profile_image">Profile image icon</string>
    <!-- END PROFILE STRINGS -->

    <!-- CONTENT DESCRIPTION STRINGS -->
    <string name="cont_desc_next">next</string>
    <string name="cont_desc_finish">finish</string>
    <string name="cont_desc_skip">skip</string>
    <string name="cont_desc_previous_date">Navigate to previous date</string>
    <string name="cont_desc_next_date">Navigate to next date</string>
    <string name="title_activity_login">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_task_view">Tasks</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="sign_in_failed">Unfortunately, sign in failed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">tasks left</string>
    <string name="appwidget_no_tasks_text">boom! all done</string>
    <string name="add_widget">Add widget</string>
    <!-- END CONTENT DESCRIPTION STRINGS -->

</resources>
