<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.justinraczak.android.flow.DayView">

    <TextView
        android:id="@+id/textview_splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_welcome_title"
        android:textColor="@android:color/white"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/textview_splash_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_welcome_description"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_splash_title"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button_splash_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:padding="18dp"
        android:text="@string/button_splash_get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_splash_description"/>

</android.support.constraint.ConstraintLayout>
