<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.justinraczak.android.flow.UserProfileActivity"
    tools:showIn="@layout/app_bar_user_profile">

    <android.support.v7.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wink"
                android:contentDescription="@string/cont_desc_profile_image"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profile_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="jraczak@gmail.com"/>
                <TextView
                    android:id="@+id/profile_member_since_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/profile_member_since_label" />
                <TextView
                    android:id="@+id/profile_member_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="05/31/2017"/>
                <TextView
                    android:id="@+id/profile_level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/profile_level_label" />
                <TextView
                    android:id="@+id/profile_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/profile_level"
                    tools:text="Novice"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_master_card"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_card"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_mastery_card_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/profile_mastery_card_label"/>
                <TextView
                    android:id="@+id/profile_mastery_card_novice_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    tools:text="Novice" />
                <TextView
                    android:id="@+id/profile_mastery_card_novice_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="0-50 tasks completed"/>
                <TextView
                    android:id="@+id/profile_mastery_card_seasoned_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    tools:text="Seasoned" />
                <TextView
                    android:id="@+id/profile_mastery_card_seasoned_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="51-100 tasks completed"/>
            <TextView
                android:id="@+id/profile_mastery_card_master_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                tools:text="Master" />
            <TextView
                android:id="@+id/profile_masteryCard_master_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="100+ tasks completed"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_test_api_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test API call"
        app:layout_constraintTop_toBottomOf="@+id/profile_master_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/profile_api_test_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_test_api_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <!--<LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"> -->
    <!--<TextView
        android:id="@+id/profile_signup_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tuesday, May 23rd 2017"/>


    </LinearLayout> -->
</android.support.constraint.ConstraintLayout>
